--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -1,7 +1,23 @@
 input {
-	padding: 10px;
+	padding: 15px;
 	background-color: #eee;
 	border: 0;
+
+	&::-webkit-input-placeholder {
+		 color: white;
+	}
+
+	&:-moz-placeholder { /* Firefox 18- */
+		 color: white;
+	}
+
+	&::-moz-placeholder {  /* Firefox 19+ */
+		 color: white;
+	}
+
+	&:-ms-input-placeholder {
+		 color: white;
+	}
 }
 
 input[type=checkbox] {
