--- a/styles/components/_search.scss
+++ b/styles/components/_search.scss
@@ -34,12 +34,15 @@
 
 		input {
 			appearance: none;
-			width: 300px;
+			width: 100%;
+			max-width: 300px;
 			border: 2px solid $white;
 			background-color: transparent;
 			color: $white;
 			position: relative;
 			padding-right: 35px;
+			appearance: none;
+			border-radius: 0;
 
 			&:focus {
 				outline: 0;
