--- a/styles/pages/_our-attorneys.scss
+++ b/styles/pages/_our-attorneys.scss
@@ -22,6 +22,16 @@
 		left: 0;
 		right: 0;
 		background: linear-gradient(rgba(0, 0, 0, .0), rgba(0, 0, 0, .9));
+
+		.thename {
+			font-weight: 600;
+			text-transform: uppercase;
+		}
+
+		.position {
+			font-family: 'proxima-nova', sans-serif;
+			font-weight: normal;
+		}
 	}
 }
 
