--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -40,6 +40,8 @@
 .case-results {
 	background-color: $offwhite;
 	padding: 80px 20px;
+	background-image: url('../assets/home__casestudies-bg.png');
+	background-position: 100% 100%;
 
 	.title {
 		text-align: center;
