--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -31,13 +31,41 @@ footer {
 			 width: 230px;
 			 text-decoration: none;
 		 }
+
+		 img {
+			 max-width: 35px;
+			 vertical-align: middle;
+			 margin-top: -5px;
+			 margin-right: 10px;
+		 }
 	}
 
 	.signup {
 		border: 0;
-		padding: 20px 50px 40px;
+		padding: 20px 30px 40px;
 		margin-bottom: 20px;
 		text-align: center;
+
+		form {
+			label {
+				display: none;
+			}
+
+			input {
+				background-color: #2d2d2d;
+				color: $white;
+				margin-right: 10px;
+				margin-bottom: 30px;
+				padding: 10px;
+			}
+
+			button {
+				border:2px solid $white;
+				padding: 7px;
+				color: $white;
+				background-color: transparent;
+			}
+		}
 	}
 
 	.location {
