--- a/styles/pages/_practice-areas.scss
+++ b/styles/pages/_practice-areas.scss
@@ -13,7 +13,8 @@
 // HIDDEN CONTENT
 //––––––––––––––––––––––––––––––
 .hover-content {
-	display: none;
+	opacity: 0;
+	transition: opacity .25s ease;
 	position: absolute;
 	height: 100%;
 	color: $gray;
@@ -26,8 +27,10 @@
 		list-style-type: none;
 		padding: 0;
 		text-align: center;
+		font-size: 18px;
 		li {
 			padding: 2px 0;
+			color: #777777;
 		}
 	}
 
@@ -40,6 +43,7 @@
 @mixin item-hover {
 	&:hover .hover-content{
 		display: flex;
+		opacity: 1;
 		background-color: $offblack;
 
 		.title {
@@ -58,6 +62,8 @@
 	.title {
 		text-align: center;
 		color: $white;
+		text-transform: uppercase;
+		font-weight: 600;
 	}
 
 	.content {
@@ -82,6 +88,10 @@
 		margin-bottom: 10px;
 		height: 150px;
 		position: relative;
+
+		.list {
+			font-size: 16px;
+		}
 	}
 
 	.criminal {
@@ -99,6 +109,10 @@
 		background-position: top center;
 		height: 150px;
 		position: relative;
+
+		.list {
+			font-size: 14px;
+		}
 	}
 }
 
