--- a/styles/pages/_news.scss
+++ b/styles/pages/_news.scss
@@ -2,6 +2,10 @@
 	.hero {
 		background-image: url('../assets/crnews__hero-bg.jpg');
 	}
+
+	p {
+		line-height: 24px;
+	}
 }
 
 
@@ -9,6 +13,7 @@
 	font-weight: bold;
 	color: $offgray;
 	padding-bottom: 15px;
+	text-transform: uppercase;
 }
 
 .readmore {
