--- a/styles/pages/_our-attorneys.scss
+++ b/styles/pages/_our-attorneys.scss
@@ -29,8 +29,10 @@
 		}
 
 		.position {
+			margin-top: -15px;
 			font-family: 'proxima-nova', sans-serif;
-			font-weight: normal;
+			font-weight: 300;
+			padding-bottom: 10px;
 		}
 	}
 }
