--- a/styles/pages/_our-attorneys.scss
+++ b/styles/pages/_our-attorneys.scss
@@ -11,6 +11,7 @@
 	text-align: center;
 	color: $white;
 	background-position: center;
+	background-size: cover;
 	background-repeat: no-repeat;
 	margin: 25px;
 
