FIXES - practice areas, document ready for slider

--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -5,7 +5,9 @@
 		background: transparent url('') !important;
 }
 
-.carousel {}
+.carousel {
+	// display: none;
+}
 
 .slide-one {
 	text-align: center;
