--- a/styles/pages/_practice-areas.scss
+++ b/styles/pages/_practice-areas.scss
@@ -32,6 +32,7 @@
 		li {
 			padding: 2px 0;
 			color: #777777;
+			line-height: 1.2;
 		}
 	}
 
@@ -53,6 +54,7 @@
 		}
 	}
 }
+
 
 //––
 // AREAS
@@ -124,6 +126,4 @@
 		@include item-hover;
 		@include cover;
 	}
-
-
 }
