--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -12,7 +12,7 @@ nav {
 
 .menu-header-navigation-container {
 	background-color: $offblack;
-	padding: 80px 15px;
+	padding: 110px 15px 80px 15px;
 	position: absolute;
 	right: -350px;
 	width: 300px;
@@ -24,7 +24,7 @@ nav {
 		display: block;
 		text-align: right;
 		text-decoration: none;
-		margin-bottom: 15px;
+		margin-bottom: 30px;
 	}
 }
 
