--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -4,7 +4,7 @@
 .home{
 	.hero {
 		background-image: url('../assets/home__hero-bg.jpg');
-		margin-bottom: 0;
+		margin-bottom: -2px;
 		min-height: 675px;
 	}
 
