FIXES - homepage mobile and desktop

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -12,11 +12,12 @@ footer {
 	}
 
 	.title {
-		font-size: 4rem;
+		font-size: 4.2rem;
 		font-weight: bold;
 		text-transform: uppercase;
 		margin-bottom: 50px;
 		text-align: center;
+		line-height: 58px;
 	}
 
 	.contact {
