--- a/styles/components/_consultationform.scss
+++ b/styles/components/_consultationform.scss
@@ -44,7 +44,7 @@
 	}
 
 	.bar {
-		color: $gray;
+		color: #717171;
 		text-align: center;
 		font-size: 1.8rem;
 		padding: 15px 5px;
@@ -106,7 +106,7 @@
 	}
 
 	.nf-field-description {
-		color: $white;
+		color: #f5f5f5;
 	}
 
 	.checkbox-wrap .nf-field-element {
