--- a/styles/pages/_our-attorneys.scss
+++ b/styles/pages/_our-attorneys.scss
@@ -2,6 +2,11 @@
 	.hero {
 		background-image: url('../assets/ourattorneys__hero-bg.jpg');
 	}
+
+	.copy {
+		font-size: 28px;
+		line-height: 1.2;
+	}
 }
 
 
