--- a/styles/pages/_ourfirm.scss
+++ b/styles/pages/_ourfirm.scss
@@ -3,6 +3,11 @@
 		background-image: url('../assets/ourfirm__hero-bg.jpg');
 		margin-bottom: 0;
 	}
+
+	.subtitle {
+		font-weight: 600;
+		line-height: 34px;
+	}
 }
 
 
