FIXES - practice areas page fixes

--- a/styles/pages/_practice-areas.scss
+++ b/styles/pages/_practice-areas.scss
@@ -4,6 +4,12 @@
 .practice-areas, .page-template-template-practice-area {
 	.hero {
 		background-image: url('../assets/practiceareas__hero-bg.jpg');
+		margin-bottom: -1px;
+	}
+	.copy {
+		font-size: 22px;
+		font-weight: 600;
+		line-height: 1.2;
 	}
 }
 
