--- a/styles/components/_ui.scss
+++ b/styles/components/_ui.scss
@@ -14,7 +14,8 @@
 		color: $white;
 		font-weight: 600;
 		text-align: center;
-		font-size: 5rem;
+		font-size: 3.4rem;
+		margin-top: 40px;
 	}
 }
 
