--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -21,6 +21,9 @@
 
 	.submit-container {
 		text-align: right;
+		input {
+			font-weight: bold;
+		}
 	}
 
 }
@@ -52,6 +55,7 @@
 	address {
 		a {
 			text-decoration: none;
+			font-weight: normal;
 		}
 		p {
 			margin: 0;
@@ -67,7 +71,6 @@
 	}
 	.copy {
 		font-size: 23px;
-		font-weight: 600;
 		padding: 0 0 25px 0;
 		color: #494a49;
 	}
